kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-records
spec:
  type: LoadBalancer
  selector:
    app: student-records
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore
spec:
  type: LoadBalancer
  selector:
    app: bookstore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
